Improve URL handling